--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 group 'se.alipsa.groovy'
-version '1.2.2-SNAPSHOT'
+version '1.2.2'
 description = "Groovy library for working with matrix ([][] data)"
 
 ext.nexusUrl = version.contains("SNAPSHOT")
