--- a/matrix-spreadsheet/build.gradle
+++ b/matrix-spreadsheet/build.gradle
@@ -29,12 +29,17 @@ dependencies {
     def groovy = 'org.apache.groovy:groovy:4.0.20'
     compileOnly groovy
     //api project(':matrix-core')
-    compileOnly('se.alipsa.groovy:matrix-core:1.2.3')
+    if (version.contains('SNAPSHOT') && rootProject.name != project.name) {
+        compileOnly project(':matrix-core')
+        testImplementation project(':matrix-core')
+    } else {
+        compileOnly 'se.alipsa.groovy:matrix-core:1.2.3'
+        testImplementation('se.alipsa.groovy:matrix-core:1.2.3')
+    }
     implementation('org.apache.poi:poi:5.2.5')
     implementation('org.apache.poi:poi-ooxml:5.2.5')
     implementation 'com.github.miachm.sods:SODS:1.6.7'
 
-    testImplementation('se.alipsa.groovy:matrix-core:1.2.3')
     testImplementation 'org.apache.logging.log4j:log4j-core:2.23.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
