--- a/matrix-sql/build.gradle
+++ b/matrix-sql/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'org.gradle:gradle-tooling-api:8.6'
     implementation 'commons-io:commons-io:2.16.1'
     implementation 'se.alipsa:maven-3.9.4-utils:1.0.3-SNAPSHOT'
+    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
 
     testImplementation groovy
     testImplementation "org.apache.groovy:groovy-sql:$groovyVersion"
@@ -47,6 +48,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
     testImplementation 'org.slf4j:slf4j-simple:2.0.13'
     testImplementation 'org.apache.logging.log4j:log4j-to-slf4j:2.23.1'
+    testImplementation 'org.apache.logging.log4j:log4j-core:2.23.1'
 }
 
 test {
