--- a/matrix-datasets/build.gradle
+++ b/matrix-datasets/build.gradle
@@ -1,6 +1,12 @@
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
 
+buildscript {
+    dependencies {
+        classpath 'se.alipsa.groovy:nexus-release-plugin:1.0.0-SNAPSHOT'
+    }
+}
+
 plugins {
     id 'groovy'
     id 'java-library'
@@ -10,8 +16,12 @@ plugins {
 }
 
 group 'se.alipsa.groovy'
-version '1.0.3-SNAPSHOT'
+version '1.0.3'
 description = "Groovy library common public domain and oss data in matrix format)"
+
+ext.nexusUrl = version.contains("SNAPSHOT")
+    ? "https://oss.sonatype.org/content/repositories/snapshots/"
+    : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 
 repositories {
     if (version.contains('SNAPSHOT')) {
@@ -126,4 +136,12 @@ signing {
     } else {
         project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
     }
+}
+
+if (project.ext.properties.sonatypeUsername) {
+    apply plugin: 'nexus-release-plugin'
+    //apply plugin: 'se.alipsa.groovy.NexusReleasePlugin'
+    nexusReleasePlugin.nexusUrl = nexusUrl
+    nexusReleasePlugin.userName = sonatypeUsername
+    nexusReleasePlugin.password = sonatypePassword
 }
