--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -1,6 +1,10 @@
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
-
+buildscript {
+  dependencies {
+    classpath 'se.alipsa.groovy:nexus-release-plugin:1.0.0-SNAPSHOT'
+  }
+}
 plugins {
   id 'groovy'
   id 'java-library'
@@ -21,6 +25,10 @@ task wrapper(type: Wrapper) {
   distributionUrl = "https://services.gradle.org/distributions/gradle-$gv-bin.zip"
   validateDistributionUrl = true
 }
+
+ext.nexusUrl = version.contains("SNAPSHOT")
+    ? "https://oss.sonatype.org/content/repositories/snapshots/"
+    : "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
 
 repositories {
   if (version.contains('SNAPSHOT')) {
@@ -128,6 +136,17 @@ publishing {
       }
     }
   }
+  if (project.ext.properties.sonatypeUsername) {
+    repositories {
+      maven {
+        credentials {
+          username = sonatypeUsername
+          password = sonatypePassword
+        }
+        url = nexusUrl
+      }
+    }
+  }
 }
 
 signing {
@@ -137,4 +156,13 @@ signing {
   } else {
     project.logger.lifecycle("signing.keyId is not defined, skipping signing of artifacts...")
   }
+}
+
+if (project.ext.properties.sonatypeUsername) {
+
+  apply plugin: 'nexus-release-plugin'
+  //apply plugin: 'se.alipsa.groovy.NexusReleasePlugin'
+  nexusReleasePlugin.nexusUrl = nexusUrl
+  nexusReleasePlugin.userName = sonatypeUsername
+  nexusReleasePlugin.password = sonatypePassword
 }
