--- a/matrix-csv/build.gradle
+++ b/matrix-csv/build.gradle
@@ -9,6 +9,14 @@ group 'se.alipsa.groovy'
 version '1.0.1-SNAPSHOT'
 description = "Groovy library for importing structured text into a matrix"
 
+// For some reason this is required to upgrade the wrapper
+// Change the version and run 'gradle wrapper' to upgrade
+task wrapper(type: Wrapper) {
+  def gv = '8.8'
+  gradleVersion = gv
+  distributionUrl = "https://services.gradle.org/distributions/gradle-$gv-bin.zip"
+  validateDistributionUrl = true
+}
 
 java {
   toolchain {
@@ -24,15 +32,15 @@ repositories {
 }
 
 dependencies {
-  def groovyVersion = '4.0.21'
+  def groovyVersion = '4.0.22'
   def groovy = "org.apache.groovy:groovy:$groovyVersion"
   compileOnly project(':matrix-core')
-  api 'org.apache.commons:commons-csv:1.10.0'
+  api 'org.apache.commons:commons-csv:1.11.0'
   compileOnly groovy
   testImplementation groovy
   testImplementation project(':matrix-core')
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.3'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.3'
   testImplementation project(':matrix-datasets')
 }
 
