--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -29,6 +29,13 @@ repositories {
   mavenLocal()
 }
 
+sourceSets {
+  main {
+    java { srcDirs = [] }    // no source dirs for the java compiler
+    groovy { srcDirs = ["src/main/java", "src/main/groovy"] }  // compile   everything in src/ with groovy
+  }
+}
+
 dependencies {
   def groovyVersion = '4.0.22'
   def groovy = "org.apache.groovy:groovy:$groovyVersion"
