--- a/matrix-core/build.gradle
+++ b/matrix-core/build.gradle
@@ -29,6 +29,14 @@ java {
   }
 }
 
+tasks.withType(JavaCompile) {
+  options.deprecation = true
+}
+
+tasks.withType(GroovyCompile) { task ->
+  task.options.deprecation = true
+}
+
 repositories {
   mavenCentral()
   mavenLocal()
