add deprecation info Move data integrity logic from MatrixBuilder to the Matrix ctor

--- a/matrix-csv/build.gradle
+++ b/matrix-csv/build.gradle
@@ -24,6 +24,14 @@ java {
   }
 }
 
+tasks.withType(JavaCompile) {
+  options.deprecation = true
+}
+
+tasks.withType(GroovyCompile) { task ->
+  task.options.deprecation = true
+}
+
 repositories {
   if (version.contains('SNAPSHOT')) {
     mavenLocal()
