--- a/matrix-examples/HousePrices/build.gradle
+++ b/matrix-examples/HousePrices/build.gradle
@@ -6,6 +6,14 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(JavaCompile) {
+    options.deprecation = true
+}
+
+tasks.withType(GroovyCompile) { task ->
+    task.options.deprecation = true
+}
+
 dependencies {
     implementation "org.apache.groovy:groovy:4.0.20"
     implementation "se.alipsa.groovy:matrix-core:1.2.3"
