--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -25,6 +25,14 @@ java {
   }
 }
 
+tasks.withType(JavaCompile) {
+  options.deprecation = true
+}
+
+tasks.withType(GroovyCompile) { task ->
+  task.options.deprecation = true
+}
+
 // we should consider using monocle to allow this to work for back-end headless apps:
 // https://wiki.openjdk.org/display/OpenJFX/Monocle
 /*
