--- a/matrix-datasets/build.gradle
+++ b/matrix-datasets/build.gradle
@@ -36,6 +36,14 @@ java {
     }
 }
 
+tasks.withType(JavaCompile) {
+    options.deprecation = true
+}
+
+tasks.withType(GroovyCompile) { task ->
+    task.options.deprecation = true
+}
+
 dependencies {
     def groovyVersion = '4.0.22'
     def groovy = "org.apache.groovy:groovy:$groovyVersion"
