--- a/matrix-json/build.gradle
+++ b/matrix-json/build.gradle
@@ -22,6 +22,14 @@ java {
   }
 }
 
+tasks.withType(JavaCompile) {
+  options.deprecation = true
+}
+
+tasks.withType(GroovyCompile) { task ->
+  task.options.deprecation = true
+}
+
 repositories {
   if (version.contains('SNAPSHOT')) {
     mavenLocal()
