fix bug for empty fiels in csv import. Make MatrixSql.tableName() static. Upgrade dependencies

--- a/matrix-charts/build.gradle
+++ b/matrix-charts/build.gradle
@@ -12,6 +12,13 @@ group 'se.alipsa.groovy'
 version '1.0.0-SNAPSHOT'
 description = "Groovy library for plotting with matrix ([][] data)"
 
+task wrapper(type: Wrapper) {
+  def gv = '8.10.1'
+  gradleVersion = gv
+  distributionUrl = "https://services.gradle.org/distributions/gradle-$gv-bin.zip"
+  validateDistributionUrl = true
+}
+
 repositories {
   if (version.contains('SNAPSHOT')) {
     mavenLocal()
@@ -55,7 +62,7 @@ dependencies {
   } else if (os.isMacOsX()) {
     qualifier = 'mac-aarch64'
   }
-  def javaFxVersion = '22.0.1'
+  def javaFxVersion = '22.0.2'
   def groovyVersion = '4.0.22'
   def groovy = "org.apache.groovy:groovy:$groovyVersion"
   // compile only dependencies are not included in the pom
@@ -65,8 +72,8 @@ dependencies {
   implementation project(':matrix-stats')
 
   // One of these is enough
-  implementation "org.jfree:jfreechart:1.5.4"
-  implementation 'org.knowm.xchart:xchart:3.8.7'
+  implementation "org.jfree:jfreechart:1.5.5"
+  implementation 'org.knowm.xchart:xchart:3.8.8'
 
   compileOnly "org.openjfx:javafx-graphics:${javaFxVersion}:$qualifier"
   compileOnly "org.openjfx:javafx-base:${javaFxVersion}:$qualifier"
@@ -80,8 +87,8 @@ dependencies {
   testImplementation "org.openjfx:javafx-base:${javaFxVersion}:$qualifier"
   testImplementation "org.openjfx:javafx-controls:${javaFxVersion}:$qualifier"
   testImplementation "org.openjfx:javafx-swing:${javaFxVersion}:$qualifier"
-  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
-  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
+  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0'
+  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
   testImplementation "org.apache.groovy:groovy-sql:$groovyVersion"
   //testImplementation 'org.testfx:testfx-core:4.0.16-alpha'
 }
