--- a/matrix-examples/DecisionTree/build.gradle
+++ b/matrix-examples/DecisionTree/build.gradle
@@ -21,12 +21,12 @@ tasks.withType(GroovyCompile) { task ->
 }
 
 dependencies {
-    implementation 'org.apache.groovy:groovy:4.0.21'
-    implementation 'se.alipsa.groovy:matrix-core:1.2.3'
-    implementation 'se.alipsa.groovy:matrix-datasets:1.0.3-SNAPSHOT'
-    implementation 'se.alipsa.groovy:matrix-stats:1.0.1-SNAPSHOT'
+    implementation 'org.apache.groovy:groovy:4.0.22'
+    implementation 'se.alipsa.groovy:matrix-core:1.2.4'
+    implementation 'se.alipsa.groovy:matrix-datasets:1.0.3'
+    implementation 'se.alipsa.groovy:matrix-stats:1.0.1'
     implementation 'se.alipsa.groovy:matrix-charts:1.0.0-SNAPSHOT'
-    testImplementation platform('org.junit:junit-bom:5.10.2')
+    testImplementation platform('org.junit:junit-bom:5.11.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
