WIP: Implement GoalSeek in matrix-stats

--- a/matrix-stats/build.gradle
+++ b/matrix-stats/build.gradle
@@ -62,6 +62,7 @@ dependencies {
   testImplementation project(':matrix-core')
   testImplementation project(':matrix-datasets')
   testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0'
+  testImplementation("se.alipsa:jfinancials:1.0-SNAPSHOT")
   testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
 }
 
